--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port= 10020
 spring.main.allow-bean-definition-overriding=true
 
+# properties for resteasy-servlet-spring-boot-starter
+# without these 2 propertiers the camunda-context is registered twice
+resteasy.jaxrs.app.registration=property
+resteasy.jaxrs.app.classes=pro.taskana.adapter.camunda.outbox.rest.config.OutboxRestServiceConfig
 
 ######################################################################################
 ## Adapter properties
@@ -97,6 +101,9 @@ camunda.bpm.admin-user.password = admin
 camunda.bpm.admin-user.firstName = admin
 camunda.bpm.filter.create = All tasks
 
+# new mandatory field starting from camunda version 7.20
+# see https://forum.camunda.io/t/camunda-7-20-history-time-to-live-cannot-be-null-cannot-deploy-wf-created-in-7-18/48159
+camunda.bpm.generic-properties.properties.historyTimeToLive: P180D
 
 #Postgres
 # camunda.datasource.jdbcUrl= jdbc:postgresql://localhost:5432/postgres
