--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <version.taskana>7.0.1-SNAPSHOT</version.taskana>
+    <version.taskana>8.0.0</version.taskana>
 
     <!-- build dependencies -->
     <version.checkstyle>10.12.4</version.checkstyle>
@@ -59,16 +59,19 @@
     <version.maven.sonar>3.10.0.2594</version.maven.sonar>
 
     <version.mybatis>3.5.13</version.mybatis>
-    <version.spring.mybatis>2.2.2</version.spring.mybatis>
+    <version.spring.mybatis>3.0.2</version.spring.mybatis>
 
-    <version.spring>5.3.26.RELEASE</version.spring>
-    <version.spring.core>3.0.0</version.spring.core>
-    <version.spring.boot>2.7.10</version.spring.boot>
+    <version.spring.plugin.core>3.0.0</version.spring.plugin.core>
+    <version.spring.boot>3.1.5</version.spring.boot>
 
-    <version.camunda>7.17.0</version.camunda>
-    <version.camunda.bpm.extensions>1.2</version.camunda.bpm.extensions>
-    <version.camunda.spin>1.19.1</version.camunda.spin>
-    <version.resteasy.spring.boot>5.0.0.Final</version.resteasy.spring.boot>
+    <version.camunda>7.20.0</version.camunda>
+    <version.camunda.spin>1.22.0</version.camunda.spin>
+
+    <version.jakarta.annotation>2.1.1</version.jakarta.annotation>
+    <version.jakarta.servlet>6.0.0</version.jakarta.servlet>
+    <version.jakarta-ws-rs-api>3.1.0</version.jakarta-ws-rs-api>
+
+    <version.resteasy.spring.boot>6.0.4.Final</version.resteasy.spring.boot>
     <version.resteasy.jaxrs>3.0.12.Final</version.resteasy.jaxrs>
     <version.javax.ws.rs.api>2.1.1</version.javax.ws.rs.api>
     <version.org.webjars.bootstrap>5.3.1</version.org.webjars.bootstrap>
