--- a/taskana-adapter-camunda-spring-boot-test/pom.xml
+++ b/taskana-adapter-camunda-spring-boot-test/pom.xml
@@ -116,6 +116,12 @@
       <version>${project.version}</version>
       <type>war</type>
     </dependency>
+    <!-- taskana-adapter-camunda-outbox-rest uses JAX-RS annotations therefore we need resteasy-spring-boot dependency -->
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-servlet-spring-boot-starter</artifactId>
+      <version>${version.resteasy.spring.boot}</version>
+    </dependency>
     <!-- Database Drivers -->
     <dependency>
       <groupId>com.ibm.db2</groupId>
@@ -139,11 +145,6 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-spring-boot-starter</artifactId>
-      <version>${version.resteasy.spring.boot}</version>
-    </dependency>
-    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
@@ -157,6 +158,13 @@
       <groupId>com.tngtech.archunit</groupId>
       <artifactId>archunit</artifactId>
       <version>${version.archunit}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${version.jakarta.annotation}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
