Closes #612: add wildfly test that wildflyApp is deployed

--- a/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-wildfly-example/src/main/resources/application.properties
@@ -30,7 +30,7 @@ taskana-system-connector-outbox-rest-api-user-password=pwd4OutboxRestUser
 ####################################################################################
 # taskana-connector properties
 ######################################################################################
-taskana.datasource.jndi-name=java:/TaskanaDS
+taskana.datasource.jndi-name=java:jboss/datasources/TaskanaDS
 ####### cache static resources properties
 spring.web.resources.cache.cachecontrol.cache-private=true
 taskana.schemaName=TASKANA
