--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
     <version.maven.checkstyle>3.3.1</version.maven.checkstyle>
     <version.maven.spring-boot>2.7.9</version.maven.spring-boot>
     <version.maven.sonar>3.10.0.2594</version.maven.sonar>
+    <version.wildfly.maven.plugin>4.0.0.Final</version.wildfly.maven.plugin>
+    <version.jboss-as-maven-plugin>7.9.Final</version.jboss-as-maven-plugin>
+    <version.maven.resources>3.3.1</version.maven.resources>
+    <version.maven.dependency>3.6.1</version.maven.dependency>
 
     <version.mybatis>3.5.13</version.mybatis>
     <version.spring.mybatis>3.0.2</version.spring.mybatis>
@@ -76,9 +80,11 @@
     <version.javax.ws.rs.api>2.1.1</version.javax.ws.rs.api>
     <version.org.webjars.bootstrap>5.3.1</version.org.webjars.bootstrap>
     <version.org.jboss.spec>3.0.3.Final</version.org.jboss.spec>
-    <version.wildfly>11.0.0.Final</version.wildfly>
-    <version.wildfly.maven.plugin>4.0.0.Final</version.wildfly.maven.plugin>
-    <version.jboss-as-maven-plugin>7.9.Final</version.jboss-as-maven-plugin>
+
+    <version.wildfly>27.0.1.Final</version.wildfly>
+    <version.arquillian>1.7.1.Final</version.arquillian>
+    <version.arquillian.managed.wildfly>5.0.1.Final</version.arquillian.managed.wildfly>
+
 
     <version.archunit>1.0.1</version.archunit>
     <version.hamcrest.json>0.2</version.hamcrest.json>
