Closes #612: add missing jaxrs and camunda properties
* added simple Integration Tests for
  * `camunda-outbox-example-boot`
  * `taskana-adapter-camunda-spring-boot-example`

 * added missing properties
   * `camunda.bpm.generic-properties.properties.historyTimeToLive`
   * `resteasy.jaxrs.app.registration`
   * `resteasy.jaxrs.app.classes`

--- a/taskana-adapter-camunda-spring-boot-example/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-example/src/main/resources/application.properties
@@ -39,7 +39,8 @@ taskana-system-connector-camundaSystemURLs=http://localhost:8081/example-context
 ####################################################################################
 #
 # Configure the datasource for Taskana DB (used by taskana-connector)
-taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:9095/mem:taskana;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;LOCK_MODE=0;
+#taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:9095/mem:taskana;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;LOCK_MODE=0;
+taskana.datasource.jdbcUrl=jdbc:h2:mem:taskana;NON_KEYWORDS=KEY,VALUE;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE
 taskana.datasource.driverClassName = org.h2.Driver
 taskana.datasource.username = sa
 taskana.datasource.password = sa
