--- a/camunda-outbox-example-boot/pom.xml
+++ b/camunda-outbox-example-boot/pom.xml
@@ -34,7 +34,6 @@
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
-      <version>${version.camunda}</version>
       <exclusions>
         <exclusion>
           <groupId>org.skyscreamer</groupId>
@@ -47,18 +46,14 @@
     <dependency>
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
-      <version>${version.camunda}</version>
     </dependency>
     <dependency>
       <groupId>org.camunda.bpm</groupId>
       <artifactId>camunda-engine-plugin-spin</artifactId>
-      <version>${version.camunda}</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.camunda.spin</groupId>
       <artifactId>camunda-spin-dataformat-json-jackson</artifactId>
-      <version>${version.camunda.spin}</version>
     </dependency>
 
     <!-- outbox-rest-spring-boot-starter-->
@@ -71,6 +66,12 @@
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-servlet-spring-boot-starter</artifactId>
       <version>${version.resteasy.spring.boot}</version>
+    </dependency>
+    <!-- testing dependencies -->
+    <dependency>
+      <groupId>org.camunda.bpm.springboot</groupId>
+      <artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
