--- a/camunda-outbox-example-boot/src/main/resources/application.properties
+++ b/camunda-outbox-example-boot/src/main/resources/application.properties
@@ -10,6 +10,15 @@ camunda.bpm.admin-user.last-name=demo
 
 camunda.bpm.database.type=h2
 
+# new mandatory field starting from camunda version 7.20
+# see https://forum.camunda.io/t/camunda-7-20-history-time-to-live-cannot-be-null-cannot-deploy-wf-created-in-7-18/48159
+camunda.bpm.generic-properties.properties.historyTimeToLive: P180D
+
+# properties for resteasy-servlet-spring-boot-starter
+# without these 2 propertiers the camunda-context is registered twice
+resteasy.jaxrs.app.registration=property
+resteasy.jaxrs.app.classes=pro.taskana.adapter.camunda.outbox.rest.config.OutboxRestServiceConfig
+
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.driver-class-name = org.postgresql.Driver
 #spring.datasource.username = postgres
