--- a/taskana-adapter-camunda-outbox-rest-spring-boot-starter/pom.xml
+++ b/taskana-adapter-camunda-outbox-rest-spring-boot-starter/pom.xml
@@ -34,8 +34,8 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
