Closes #612: fix Code smells, removes junit-vintag
* increases test coverage
* fixes codesmells from Java17 upgrade
* adding more useful ArchUnitTests
* changes related to new ArchUnitTest
* removes junit-vintage dependency

--- a/camunda-outbox-example-boot/pom.xml
+++ b/camunda-outbox-example-boot/pom.xml
@@ -73,6 +73,13 @@
       <artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.tngtech.archunit</groupId>
+      <artifactId>archunit</artifactId>
+      <version>${version.archunit}</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
