--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.tngtech.archunit</groupId>
+      <artifactId>archunit</artifactId>
+      <version>${version.archunit}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
