--- a/taskana-adapter-camunda-listener/pom.xml
+++ b/taskana-adapter-camunda-listener/pom.xml
@@ -12,12 +12,14 @@
     <version>3.0.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-
+  <properties>
+    <version.camunda>7.19.0</version.camunda>
+    <java.version>8</java.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.camunda.bpm</groupId>
       <artifactId>camunda-engine</artifactId>
-      <version>${version.camunda}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -40,5 +42,24 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>${version.maven.compiler}</version>
+      <configuration>
+        <source>${maven.compiler.source}</source>
+        <target>${maven.compiler.target}</target>
+        <showWarnings>true</showWarnings>
+        <failOnWarning>true</failOnWarning>
+        <compilerArgs>
+          <arg>-Xlint:-serial</arg>
+          <arg>-proc:none</arg>
+          <arg>-Xbootclasspath:${env.JAVA_HOME_8_X64}/jre/lib/rt.jar</arg>
+        </compilerArgs>
+      </configuration>
+    </plugin>
+  </plugins>
+  </build>
 </project>
