Closes #542 - make clustering possible by adding locking
Co-authored-by: ryzheboka <25465835+ryzheboka@users.noreply.github.com>
Co-authored-by: jamesrdi <james.reynaldi@envite.de>

--- a/taskana-adapter-camunda-spring-boot-example/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-example/src/main/resources/application.properties
@@ -32,7 +32,7 @@ taskana-system-connector-outbox-rest-api-user-password=pwd4OutboxRestUser
 # Set URLs of Camunda REST API and associated TASKANA Outbox REST API. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-OutboxRestURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-OutboxRestURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:8081/example-context-root/rest | http://localhost:8081/example-context-root/outbox-rest
+taskana-system-connector-camundaSystemURLs=http://localhost:8081/example-context-root/engine-rest | http://localhost:8081/example-context-root/outbox-rest
 
 ####################################################################################
 # Taskana-connector properties
@@ -45,13 +45,16 @@ taskana.datasource.driverClassName = org.h2.Driver
 taskana.datasource.username = sa
 taskana.datasource.password = sa
 taskana.schemaName=TASKANA
+taskana.adapter.events.lockDuration=300
+taskana.adapter.sync.taskana.batchSize=1
+
 #
 # taskana.datasource.jdbcUrl=jdbc:db2://localhost:50050/taskana
 # taskana.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
 # taskana.datasource.username=db2user
 # taskana.datasource.password=Db2password
 
-#taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
+#taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5102/postgres
 #taskana.datasource.driverClassName=org.postgresql.Driver
 #taskana.datasource.username=postgres
 #taskana.datasource.password=postgres
