--- a/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
+++ b/taskana-adapter-camunda-spring-boot-test/src/main/resources/application.properties
@@ -60,12 +60,13 @@ taskana.datasource.password = sa
 #taskana.datasource.username=db2user
 #taskana.datasource.password=Db2password
 
-##taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
+##taskana.datasource.jdbcUrl=jdbc:postgresql://localhost:5102/postgres
 ##taskana.datasource.driverClassName=org.postgresql.Driver
 ##taskana.datasource.username=postgres
 ##taskana.datasource.password=postgres
 
 taskana.schemaName=TASKANA
+taskana.adapter.sync.taskana.batchSize=1
 
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
@@ -106,7 +107,7 @@ camunda.bpm.filter.create = All tasks
 camunda.bpm.generic-properties.properties.historyTimeToLive: P180D
 
 #Postgres
-# camunda.datasource.jdbcUrl= jdbc:postgresql://localhost:5432/postgres
+# camunda.datasource.jdbcUrl= jdbc:postgresql://localhost:5102/postgres
 # camunda.datasource.driverClassName = org.postgresql.Driver
 # camunda.datasource.username = postgres
 # camunda.datasource.password = postgres
