--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -51,6 +51,10 @@
       <version>${version.archunit}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
