--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <version.taskana>8.1.1-SNAPSHOT</version.taskana>
+    <version.taskana>8.2.0</version.taskana>
 
     <!-- build dependencies -->
     <version.checkstyle>10.17.0</version.checkstyle>
